<!-- SPDX-FileCopyrightText: 2026 Tsuyomi Contributors -->
<!-- SPDX-License-Identifier: Apache-2.0 -->
<resources>
    <string name="coreui_navigate_up">返回</string>
    <string name="coreui_close">关闭</string>
    <string name="coreui_more_actions">更多操作</string>
    <string name="coreui_menu_back_to">返回%1$s</string>
    <string name="coreui_retry">重试</string>
    <string name="coreui_loading">正在加载…</string>
    <string name="coreui_image">图片</string>
...
